# terok

./: .gitignore  .importlinter  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  REUSE.toml  SECURITY.md  conftest.py  mkdocs.yml  properdocs.yml  pyproject.toml  sonar-project.properties  tach.toml  vulture_whitelist.py
.github/: requirements-ci.txt
.github/workflows/: analysis.yml  ci.yml  docs.yml  integration.yml  inventory.yml  no-git-deps.yml  release.yml  sonar.yml  sonar_pr.yml  test-matrix.yml
docs/: DEVELOPER.md  SHARED_DIRS.md  USAGE.md  agent-compat-matrix.md  concepts.md  container-layers.md  container-lifecycle.md  custom-images.md  developer.md  docker.md  gen_config_reference.py  gen_quality_report.py  gen_ref_pages.py  gen_test_map.py  git-gate-and-security-modes.md  index.md  kernel-keyring.md  login-design.md  runtimes.md  selinux.md  shared-dirs.md  shield-security.md  test_map.py  usage.md
docs/brainstorming/: first-run-symmetry-followups.md
docs/javascripts/: mermaid-config.mjs
docs/stylesheets/: extra.css
examples/: terok-config.yml
examples/hooks/: task-notify.sh  toad-port-forward.sh
examples/logrotate/: terok.conf
examples/projects/alpaka3/: project.yml
examples/projects/cp2k/: project.yml
examples/projects/uc/: project.yml
examples/snippets/: vibe-readable-colors.dockerinclude
examples/uc/: instructions.md
overrides/partials/: logo.html
src/luskctl/tui/: project_actions.py  screens.py  task_actions.py
src/terok/: __init__.py
src/terok/clearance/: __init__.py  _install.py  identity.py
src/terok/cli/: __init__.py  __main__.py  main.py  tree.py  wiring.py  xdg_terminal_exec.py
src/terok/gate/: __main__.py  server.py
src/terok/lib/: __init__.py  api.py  facade.py
src/terok/tui/: __init__.py  __main__.py  _worker_entry.py  agents_screen.py  app.py  askpass.py  askpass_protocol.py  askpass_service.py  clearance_screen.py  clipboard.py  console_log.py  console_output_screen.py  gpu_screen.py  key_routing_screen.py  log_viewer.py  polling.py  project_actions.py  screens.py  selinux_fix_screen.py  serve.py  setup_screen.py  shell_launch.py  task_actions.py  task_watcher.py  text_screens.py  tmux_session.py  wizard_screens.py  worker_actions.py  worker_log_screen.py
src/terok/ui_utils/: __init__.py  editor.py  terminal.py
tests/: __init__.py  constants.py  test_utils.py  testcli.py  testfs.py  testgate.py  testmodule_utils.py  testnet.py
tests/cli/: test_cli_autopilot.py  test_cli_completions.py  test_cli_config.py  test_cli_gate_server.py  test_cli_image.py  test_cli_module.py  test_cli_shield.py  test_cli_sickbay.py  test_cli_wizard.py  test_cli_workflows.py
tests/containers/: Containerfile.alpine  Containerfile.debian12  Containerfile.debian13  Containerfile.fedora43  Containerfile.fedora44  Containerfile.mageia  Containerfile.nix  Containerfile.podman  Containerfile.ubuntu2404  Containerfile.ubuntu2604  Containerfile.void  matrix.yml  run-matrix.sh
tests/containers/fragments/: Containerfile.alpine  Containerfile.void
tests/gate/: test_server.py
tests/integration/: __init__.py  conftest.py  helpers.py  test_bypass_connectivity.py  test_container_e2e.py  test_shield_hooks.py  test_shield_no_podman.py  test_shield_podman.py  test_shield_restart.py
tests/integration/cli/: test_vault_unlock_story.py
tests/integration/containers/: conftest.py  test_git_identity_container.py
tests/integration/credential_proxy/: __init__.py  test_proxy_env_integration.py  test_proxy_stories.py  test_ssh_agent_stories.py
tests/integration/gate/: test_sync.py
tests/integration/launch/: README.md  test_task_start.py
tests/integration/projects/: test_projects.py
tests/integration/setup/: test_ssh_init.py
tests/integration/stories/: __init__.py  conftest.py  test_phantom_token_roundtrip.py  test_provider_response_relay.py  test_verdict_loop.py
tests/integration/tasks/: test_git_identity.py  test_lifecycle.py
tests/integration/vault/: __init__.py  test_ssh_signer_stories.py  test_token_broker_stories.py  test_vault_env_integration.py
tests/lib/: test_agent_config.py  test_autopilot.py  test_cdi_hint.py  test_config.py  test_config_stack.py  test_container_lifecycle.py  test_docker.py  test_editor.py  test_effective_status.py  test_emoji.py  test_environment_gate_server.py  test_gate_server.py  test_gate_tokens.py  test_git_authorship.py  test_git_gate.py  test_headless_providers.py  test_image_cleanup.py  test_images.py  test_instructions.py  test_log_format.py  test_login.py  test_podman_network.py  test_project_archive.py  test_project_delete.py  test_projects.py  test_shell_launch.py  test_shield.py  test_ssh.py  test_task_names.py  test_tasks.py  test_wizard.py  test_wizard_templates.py  test_work_status.py
tests/lib/shield/: __init__.py  test_audit.py  test_config.py  test_dns.py  test_hook.py  test_nft.py  test_nft_isolation.py  test_nft_syntax.py  test_profiles.py  test_standard.py
tests/scripts/: __init__.py  test_blablador.py  test_init_branch_selection.py
tests/tui/: __init__.py  conftest.py  test_detail_screens.py  test_log_viewer.py  test_polling.py  test_project_state_staleness.py  test_tui_module.py  test_version_branch_detection.py  tui_test_helpers.py
tests/unit/: __init__.py  conftest.py  test_error_surfacing.py  test_import_laziness.py  test_package_version.py  test_subprocess_pythonpath_call_sites.py  test_unified_layering_contracts.py
tests/unit/clearance/: test_identity.py  test_notifier_app.py
tests/unit/cli/: conftest.py  test_cli_acp.py  test_cli_agents.py  test_cli_auth.py  test_cli_autopilot.py  test_cli_completions.py  test_cli_config.py  test_cli_credentials.py  test_cli_dbus.py  test_cli_gate_server.py  test_cli_image.py  test_cli_image_usage.py  test_cli_main.py  test_cli_module.py  test_cli_panic.py  test_cli_project.py  test_cli_proxy.py  test_cli_selinux.py  test_cli_setup_global.py  test_cli_shield.py  test_cli_sickbay.py  test_cli_task_dispatch.py  (+13 more)
tools/: terok-chain-open.sh  terok-migrate-vault.py  terok-release-chain.py  terok-release-chain.sh
(+338 files in other folders)
