[build-system]
requires = ["poetry-core>=2.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "terok"
description = "Sandboxing for AI coding agents, built on Podman."
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Jiri Vyskocil", email = "jiri@vyskocil.com"},
]
maintainers = [
    {name = "Jiri Vyskocil", email = "jiri@vyskocil.com"},
]
keywords = ["podman", "containers", "tasks", "developer-tools", "cli"]
requires-python = ">=3.12,<3.15"
dynamic = ["version", "classifiers"]
dependencies = [
    "pydantic>=2.6",
    "ruamel.yaml>=0.18",
    "textual[syntax]==8.2.5",
    "argcomplete>=3.1",
    "requests>=2.31",
    "rich>=13.0",
    "platformdirs>=4.5.1",
    "unique-namer>=1.3",
    "textual-serve>=1.1.0",
    "jinja2>=3.1",
    "terok-executor @ https://github.com/terok-ai/terok-executor/releases/download/v0.0.149a29/terok_executor-0.0.149a29-py3-none-any.whl",
    "terok-sandbox @ https://github.com/terok-ai/terok-sandbox/releases/download/v0.0.124a23/terok_sandbox-0.0.124a23-py3-none-any.whl",
    "terok-shield @ https://github.com/terok-ai/terok-shield/releases/download/v0.6.42a11/terok_shield-0.6.42a11-py3-none-any.whl",
    "terok-clearance @ https://github.com/terok-ai/terok-clearance/releases/download/v0.6.14a8/terok_clearance-0.6.14a8-py3-none-any.whl",
    "terok-util @ https://github.com/terok-ai/terok-util/releases/download/v0.0.2a2/terok_util-0.0.2a2-py3-none-any.whl",
]

[project.urls]
Homepage = "https://terok.ai/"
Repository = "https://github.com/terok-ai/terok"
Documentation = "https://terok-ai.github.io/terok/"
Issues = "https://github.com/terok-ai/terok/issues"
Changelog = "https://github.com/terok-ai/terok/blob/master/CHANGELOG.md"
Security = "https://github.com/terok-ai/terok/security/policy"

[project.scripts]
terok = "terok.cli.main:main"
terokctl = "terok.cli.main:terokctl_main"
terok-tui = "terok.tui.app:main"
terok-web = "terok.tui.serve:main"
terok-clearance = "terok.tui.clearance_screen:main"
terok-askpass = "terok.tui.askpass:main"

[tool.poetry]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]

# Use the src/ layout
packages = [
  { include = "terok", from = "src" },
]

# Extra files to ship alongside the package (similar to the old MANIFEST.in
# and setuptools data-files). These will be present in the sdist and wheel,
# but note that Poetry does not support installing them under /usr/share;
# they will live under the installed distribution instead.
include = [
  { path = "completions/terok" },
  { path = "docs/*.md" },
  { path = "examples/**" },
]
version = "0.7.9"

[tool.poetry.group.dev.dependencies]
pydevd-pycharm = "262.6653.28"
ruff = ">=0.15.15"
markdown-it-py = ">=4.0.0"
mdit-py-plugins = ">=0.5.0"
tach = "^0.35.0"
textual-dev = "^1.8.0"
docstr-coverage = "^2.3.2"
complexipy = ">=5.5.0"
vulture = ">=2.12"
reuse = "^6.2.0"
bandit = ">=1.7"
pre-commit = ">=4.0"
import-linter = ">=2.1"
mypy = ">=1.13,<3.0"

[tool.poetry.group.test.dependencies]
pytest = ">=7.0"
pytest-asyncio = ">=1.4.0"
pytest-cov = ">=4.0"

# Optional group — only the matrix runner pulls this in.  Adding
# python-dbusmock here (rather than to "test") keeps CI's default
# ``poetry install`` clean: dbus-python (the transitive of
# python-dbusmock) has no wheel and needs system-level libdbus-1-dev
# headers to compile, which the GitHub-hosted Ubuntu runner doesn't
# ship.  The matrix Containerfiles install those deps and the runner
# script invokes ``poetry install --with test --with stories`` to
# pull this group.
[tool.poetry.group.stories]
optional = true

[tool.poetry.group.stories.dependencies]
# Powers the mock org.freedesktop.Notifications daemon used by
# tests/integration/stories/test_verdict_loop.py.  Same version
# constraint as terok-clearance.
python-dbusmock = ">=0.32"

[tool.poetry.group.docs.dependencies]
properdocs = ">=1.6.7"
mkdocs-material = ">=9.0"
mkdocstrings = {extras = ["python"], version = ">=0.24"}
mkdocs-gen-files = ">=0.5"
mkdocs-literate-nav = ">=0.6"
mkdocs-section-index = ">=0.3"
mkdocs-terok = "^0.6"


[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
python_files = ["test_*.py"]
python_classes = ["Test*", "*Tests"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
  "needs_podman: requires podman on PATH",
  "needs_root: requires root for nftables",
  "needs_host_features: real host/filesystem/process integration, no network or podman required",
  "needs_internet: requires outbound network connectivity",
  "needs_hooks: requires OCI global hooks installed via terok shield install-hooks",
  "needs_vault: exercises real vault (DB + token-broker daemon)",
  "needs_dbus: requires a private D-Bus session bus (provided via python-dbusmock)",
]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # pyflakes
  "I",      # isort
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "UP",     # pyupgrade
  "SIM",    # flake8-simplify
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "B904",   # raise from in except (not needed for SystemExit in CLI apps)
  "SIM102", # nested if statements (explicit can be clearer)
  "SIM105", # contextlib.suppress vs try/except/pass (try/except is often clearer)
  "SIM108", # use ternary operator (not always clearer)
  "SIM117", # nested with statements (explicit nesting can be clearer)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]  # allow imports after sys.modules mocking

[tool.ruff.lint.isort]
known-first-party = ["terok"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# Static type checking — see `make typecheck`.
[tool.mypy]
python_version = "3.12"
files = ["src/terok"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
strict_equality = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
pretty = true
show_error_codes = true

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^v(?P<base>\\d+\\.\\d+\\.\\d+)(?:(?P<stage>a)(?P<revision>\\d+))?$"
style = "pep440"
