[build-system]
requires = ["hatchling>=1.27", "hatch-vcs>=0.5"]
build-backend = "hatchling.build"

[project]
name = "terok"
description = "Sandboxing for AI coding agents, built on Podman."
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Jiri Vyskocil", email = "jiri@vyskocil.com"},
]
maintainers = [
    {name = "Jiri Vyskocil", email = "jiri@vyskocil.com"},
]
keywords = ["podman", "containers", "tasks", "developer-tools", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
requires-python = ">=3.12,<3.15"
dynamic = ["version"]
# Dependency pins follow the policy in AGENTS.md ("Dependency Pinning &
# pyproject.toml Hygiene").  Keep the dependency list comment-free.
dependencies = [
    "pydantic~=2.13",
    "ruamel.yaml==0.19.1",
    "textual[syntax]~=8.2.8",
    "argcomplete~=3.7",
    "requests~=2.34",
    "rich~=15.0",
    "platformdirs~=4.10",
    "unique-namer~=1.6",
    "textual-serve~=1.1",
    "jinja2~=3.1",
    "terok-executor @ https://github.com/terok-ai/terok-executor/releases/download/v0.4.0a9/terok_executor-0.4.0a9-py3-none-any.whl",
    "terok-sandbox @ https://github.com/terok-ai/terok-sandbox/releases/download/v0.5.0a9/terok_sandbox-0.5.0a9-py3-none-any.whl",
    "terok-shield @ https://github.com/terok-ai/terok-shield/releases/download/v0.8.0a6/terok_shield-0.8.0a6-py3-none-any.whl",
    "terok-clearance @ https://github.com/terok-ai/terok-clearance/releases/download/v0.8.0a6/terok_clearance-0.8.0a6-py3-none-any.whl",
    "terok-util @ https://github.com/terok-ai/terok-util/releases/download/v0.3.1a3/terok_util-0.3.1a3-py3-none-any.whl",
]

[project.urls]
Homepage = "https://terok-ai.github.io/terok/"
Repository = "https://github.com/terok-ai/terok"
Documentation = "https://terok-ai.github.io/terok/"
Issues = "https://github.com/terok-ai/terok/issues"
Changelog = "https://github.com/terok-ai/terok/blob/master/CHANGELOG.md"
Security = "https://github.com/terok-ai/terok/security/policy"

[project.scripts]
terok = "terok.cli.main:main"
terokctl = "terok.cli.main:terokctl_main"
terok-tui = "terok.tui.app:main"
terok-web = "terok.tui.serve:main"
terok-clearance = "terok.tui.clearance_screen:main"
terok-ssh-routing = "terok.tui.key_routing_screen:main"
terok-askpass = "terok.tui.askpass:main"

[dependency-groups]
dev = [
    "ruff>=0.15.21",
    "markdown-it-py>=4.0.0",
    "mdit-py-plugins>=0.5.0",
    "tach>=0.35.0,<0.36",
    "textual-dev>=1.8.0,<2",
    "docstr-coverage>=2.3.2,<3",
    "complexipy>=6.0.1",
    "vulture>=2.12",
    "reuse>=6.2.0,<7",
    "bandit>=1.7",
    "pre-commit>=4.0",
    "import-linter>=2.13",
    "mypy>=2.2.0,<3.0",
]
test = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=4.0",
]
# Outside default-groups -- the PyCharm remote-debug helper is an IDE
# nicety, not a CI tool; keeping it out of "dev" keeps every CI tool
# job (and the setup-uv cache) from carrying its wheel.  Opt in with
# ``uv sync --group ide``.
ide = [
    "pydevd-pycharm==262.8665.186",
]
# Outside default-groups -- only the matrix runner pulls this in.
# Keeping python-dbusmock here (rather than in "test") keeps CI's
# default ``uv sync`` clean: dbus-python (the transitive of
# python-dbusmock) has no wheel and needs system-level libdbus-1-dev
# headers to compile, which the GitHub-hosted Ubuntu runner doesn't
# ship.  The matrix Containerfiles install those deps and the matrix
# engine syncs ``--group test --group stories`` per matrix.yml.
# python-dbusmock powers the mock org.freedesktop.Notifications
# daemon used by tests/integration/stories/test_verdict_loop.py;
# same version constraint as terok-clearance.
stories = [
    "python-dbusmock>=0.32",
]
docs = [
    "properdocs>=1.6.7",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.5",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-section-index>=0.3",
    "mkdocs-terok~=0.8.0",
]

[tool.uv]
default-groups = ["dev", "test"]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.9.0a1"

# The sibling terok-* release wheels are pinned by direct URL (see the
# pinning policy in AGENTS.md); hatchling requires an explicit opt-in
# for direct references in [project.dependencies].
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/terok"]


[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
python_files = ["test_*.py"]
python_classes = ["Test*", "*Tests"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
  "needs_podman: requires podman on PATH",
  "needs_root: requires root for nftables",
  "needs_host_features: real host/filesystem/process integration, no network or podman required",
  "needs_internet: requires outbound network connectivity",
  "needs_hooks: requires OCI global hooks installed via terok shield install-hooks",
  "needs_vault: exercises real vault (DB + token-broker daemon)",
  "needs_dbus: requires a private D-Bus session bus (provided via python-dbusmock)",
]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # pyflakes
  "I",      # isort
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "UP",     # pyupgrade
  "SIM",    # flake8-simplify
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "B904",   # raise from in except (not needed for SystemExit in CLI apps)
  "SIM102", # nested if statements (explicit can be clearer)
  "SIM105", # contextlib.suppress vs try/except/pass (try/except is often clearer)
  "SIM108", # use ternary operator (not always clearer)
  "SIM117", # nested with statements (explicit nesting can be clearer)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]  # allow imports after sys.modules mocking

[tool.ruff.lint.isort]
known-first-party = ["terok"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# Static type checking -- see `make typecheck`.
[tool.mypy]
python_version = "3.12"
files = ["src/terok"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
strict_equality = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
pretty = true
show_error_codes = true
